<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/game_instructions"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/hint_user1"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/user2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:hint="@string/hint_user2"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/reset_button"
        android:textSize="20sp" />


    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:columnCount="3"
        android:rowCount="3">


        <Button
            android:id="@+id/btn1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:textSize="50sp" />


        <Button
            android:id="@+id/btn3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:textSize="50sp" />


        <Button
            android:id="@+id/btn5"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:textSize="50sp" />


        <Button
            android:id="@+id/btn6"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:textSize="50sp" />


        <Button
            android:id="@+id/btn7"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:textSize="50sp" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:textSize="50sp" />


        <Button
            android:id="@+id/btn9"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:textSize="50sp" />


    </GridLayout>


</LinearLayout>